latency improvements: connection pooling; iterows() replacement; advanced caching: registry to cache series_id -> (name, unit, label, data_class, retention)

--- a/examples/nb_01_write_read_pandas.ipynb
+++ b/examples/nb_01_write_read_pandas.ipynb
@@ -370,9 +370,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.3: Multi-Series Collections - Understanding the Behavior\n",
+    "### 7.3: Multi-Series Collections - Insert One at a Time\n",
     "\n",
-    "When a collection matches multiple series, the behavior depends on your DataFrame structure."
+    "When a collection matches multiple series that share the same name (differentiated only by labels), you must narrow down to a single series before inserting. The column name doesn't matter for single-series inserts."
    ]
   },
   {
@@ -385,56 +385,61 @@
      "output_type": "stream",
      "text": [
       "This collection matches 3 series\n",
+      "Turbines: ['T01', 'T02', 'T03']\n",
       "\n",
-      "Single-column insert succeeded\n",
+      "Inserted for turbine T01\n",
       "  Series used: ['power']\n",
-      "  Note: Column 'power' was auto-detected as series name\n",
       "\n",
-      "Multi-column insert succeeded\n",
-      "  Series used: ['T01', 'T02', 'T03']\n",
-      "  Note: Each column matched to a series by name\n"
+      "Inserted for turbine T02\n",
+      "  Series used: ['power']\n",
+      "\n",
+      "Inserted for turbine T03\n",
+      "  Series used: ['power']\n",
+      "\n",
+      "Read back all Gotland wind power:\n",
+      "name                       wind_power  wind_power  wind_power\n",
+      "valid_time                                                   \n",
+      "2025-01-01 00:00:00+00:00        89.0        88.0        82.0\n",
+      "2025-01-01 01:00:00+00:00        89.0        88.0        82.0\n",
+      "2025-01-01 02:00:00+00:00        89.0        88.0        82.0\n",
+      "2025-01-01 03:00:00+00:00        89.0        88.0        82.0\n",
+      "2025-01-01 04:00:00+00:00        89.0        88.0        82.0\n"
      ]
     }
    ],
    "source": [
-    "# When a collection matches MULTIPLE series\n",
+    "# When a collection matches MULTIPLE series with the same name,\n",
+    "# you must narrow to a single series before inserting.\n",
     "broad_collection = td.series(\"wind_power\").where(site=\"Gotland\")\n",
     "print(f\"This collection matches {broad_collection.count()} series\")\n",
+    "print(f\"Turbines: {broad_collection.list_labels('turbine')}\")\n",
     "\n",
-    "# Case 1: Single column DataFrame - will use auto-detection\n",
-    "# The column name becomes the series name\n",
-    "df_single_col = pd.DataFrame({\n",
-    "    'valid_time': dates,\n",
-    "    'power': [75.0] * 24,\n",
-    "})\n",
+    "# Insert data for each turbine by narrowing the collection\n",
+    "for turbine in broad_collection.list_labels('turbine'):\n",
+    "    specific = broad_collection.where(turbine=turbine)\n",
+    "    \n",
+    "    df = pd.DataFrame({\n",
+    "        'valid_time': dates,\n",
+    "        'power': [75.0 + hash(turbine) % 20] * 24,  # Different values per turbine\n",
+    "    })\n",
+    "    \n",
+    "    result = specific.insert(df)\n",
+    "    print(f\"\\nInserted for turbine {turbine}\")\n",
+    "    print(f\"  Series used: {list(result.series_ids.keys())}\")\n",
     "\n",
-    "result = broad_collection.insert(df_single_col)\n",
-    "print(f\"\\nSingle-column insert succeeded\")\n",
-    "print(f\"  Series used: {list(result.series_ids.keys())}\")\n",
-    "print(f\"  Note: Column 'power' was auto-detected as series name\")\n",
-    "\n",
-    "# Case 2: Multi-column DataFrame - maps columns to series names\n",
-    "# For proper multi-series write, name columns after turbines\n",
-    "df_multi_col = pd.DataFrame({\n",
-    "    'valid_time': dates,\n",
-    "    'T01': [80.0] * 24,\n",
-    "    'T02': [85.0] * 24,\n",
-    "    'T03': [82.0] * 24,\n",
-    "})\n",
-    "\n",
-    "result2 = broad_collection.insert(df_multi_col)\n",
-    "print(f\"\\nMulti-column insert succeeded\")\n",
-    "print(f\"  Series used: {list(result2.series_ids.keys())}\")\n",
-    "print(f\"  Note: Each column matched to a series by name\")"
+    "# Read back all Gotland data at once\n",
+    "df_all = broad_collection.read()\n",
+    "print(f\"\\nRead back all Gotland wind power:\")\n",
+    "print(df_all.head())"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 7.3b: When Column Names Don't Match Series Names\n",
+    "### 7.3b: Single Series - Any Column Name Works\n",
     "\n",
-    "If your DataFrame columns don't match existing series names and you're working with multiple series, you need to be explicit."
+    "When a collection resolves to exactly one series, the DataFrame column name doesn't matter — the data is mapped to that series automatically."
    ]
   },
   {
@@ -448,7 +453,7 @@
      "text": [
       "Specific collection: 1 series\n",
       "Single-series insert: column name doesn't matter\n",
-      "  Series used: {'my_power_reading': UUID('0e60254a-bb11-4883-a11f-e425ea27a3ac')}\n"
+      "  Series used: {'my_power_reading': 1}\n"
      ]
     }
    ],
