--- a/examples/nb_02_units_validation.ipynb
+++ b/examples/nb_02_units_validation.ipynb
@@ -103,7 +103,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "7b0f38c4-5ced-4d14-9486-9932f8259013",
+       "ref": "de701606-457f-4d17-bc2c-caf4ac7ff462",
        "rows": [
         [
          "0",
@@ -274,7 +274,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "946227b5-26e8-4123-93d0-2f513f5bf3a3",
+       "ref": "ccfb8ae6-9006-4e52-9645-fecb6893b4bd",
        "rows": [
         [
          "valid_time",
@@ -327,9 +327,9 @@
       "Data inserted successfully!\n",
       "\n",
       "Series created:\n",
-      "  power: 98d48850-e27a-4031-96cb-f4ab5035cb11\n",
-      "  wind_speed: c7e778aa-4cb0-4eac-9850-fbba807fbdb7\n",
-      "  temperature: 3cc41bff-80e3-4ef3-b1f1-fd912c2e321a\n"
+      "  power: 1\n",
+      "  wind_speed: 2\n",
+      "  temperature: 3\n"
      ]
     }
    ],
@@ -435,7 +435,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "86ed1cb2-355c-48df-9002-005c20ab3c13",
+       "ref": "acdf49a1-4ce7-468a-9585-9ddbf0e64249",
        "rows": [
         [
          "2025-01-01 00:00:00+00:00",
