--- a/examples/nb_04_timeseries_changes.ipynb
+++ b/examples/nb_04_timeseries_changes.ipynb
@@ -83,14 +83,14 @@
      "output_type": "stream",
      "text": [
       "Inserted FLAT series: meter_reading\n",
-      "  Series ID: a93b7043-68e3-4a99-a307-43106fa56ea0\n",
+      "  Series ID: 1\n",
       "\n",
       "Inserted OVERLAPPING Batch 1 (initial forecast):\n",
-      "  Batch ID: 52e3943a-5b28-4313-bf62-4e9ea1e03b3b\n",
+      "  Batch ID: 2\n",
       "  Known time: 2025-01-01 00:00:00+00:00\n",
       "\n",
       "Inserted OVERLAPPING Batch 2 (revised forecast):\n",
-      "  Batch ID: 75cd130a-e96f-4f43-ac7f-bfb2239bde82\n",
+      "  Batch ID: 3\n",
       "  Known time: 2025-01-01 02:00:00+00:00\n",
       "\n",
       "============================================================\n",
@@ -222,7 +222,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "cbbc5d0d-8ffc-4eb4-9e36-0ca1e055edc2",
+       "ref": "5c1a94e8-7b03-4141-96cb-07a003be482f",
        "rows": [
         [
          "(Timestamp('2025-01-01 00:00:00+0000', tz='UTC'), Timestamp('2025-01-01 00:00:00+0000', tz='UTC'))",
@@ -640,19 +640,19 @@
       "------------------------------------------------------------\n",
       "  known_time: 2025-01-01 00:00:00+00:00 -> value: 25.79  [Batch 1 (original)]\n",
       "  known_time: 2025-01-01 02:00:00+00:00 -> value: 26.82  [Batch 2 (revised)]\n",
-      "  known_time: 2026-02-09 15:34:59.696195+00:00 -> value: 29.00  [UPDATE (new version)]\n",
+      "  known_time: 2026-02-11 13:24:59.980601+00:00 -> value: 29.00  [UPDATE (new version)]\n",
       "\n",
       "Valid time: 2025-01-01 12:00:00+00:00 (updated via known_time)\n",
       "------------------------------------------------------------\n",
       "  known_time: 2025-01-01 00:00:00+00:00 -> value: 20.12  [Batch 1 (original)]\n",
       "  known_time: 2025-01-01 02:00:00+00:00 -> value: 19.64  [Batch 2 (revised)]\n",
-      "  known_time: 2026-02-09 15:34:59.941676+00:00 -> value: 27.00  [UPDATE (new version)]\n",
+      "  known_time: 2026-02-11 13:25:00.087528+00:00 -> value: 27.00  [UPDATE (new version)]\n",
       "\n",
       "Valid time: 2025-01-01 18:00:00+00:00 (updated via valid_time)\n",
       "------------------------------------------------------------\n",
       "  known_time: 2025-01-01 00:00:00+00:00 -> value: 14.55  [Batch 1 (original)]\n",
       "  known_time: 2025-01-01 02:00:00+00:00 -> value: 14.48  [Batch 2 (revised)]\n",
-      "  known_time: 2026-02-09 15:35:00.384242+00:00 -> value: 25.00  [UPDATE (new version)]\n",
+      "  known_time: 2026-02-11 13:25:00.256000+00:00 -> value: 25.00  [UPDATE (new version)]\n",
       "\n",
       "================================================================================\n",
       "Key insight: Each update created a NEW version with known_time=now().\n",
