--- a/examples/quickstart.ipynb
+++ b/examples/quickstart.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "86225072",
    "metadata": {},
    "outputs": [
@@ -51,7 +51,11 @@
    "cell_type": "markdown",
    "id": "9b575168",
    "metadata": {},
-   "source": "## 2. Create a Series\n\nA series is identified by its name and optional labels. Since this is forecast data, we set `data_class='overlapping'`."
+   "source": [
+    "## 2. Create a Series\n",
+    "\n",
+    "A series is identified by its name and optional labels. Since this is forecast data, we set `data_class='overlapping'`."
+   ]
   },
   {
    "cell_type": "code",
@@ -87,7 +91,7 @@
     {
      "data": {
       "text/plain": [
-       "InsertResult(batch_id=UUID('1ba96029-134e-4cbd-86e3-d69c515be8d2'), workflow_id='sdk-workflow', series_ids={'wind_power': UUID('1dd82dea-f4e1-43e2-966d-db419eba2601')})"
+       "InsertResult(batch_id=1, workflow_id='sdk-workflow', series_ids={'wind_power': 1})"
       ]
      },
      "execution_count": 3,
@@ -132,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "InsertResult(batch_id=UUID('9a6d47aa-2696-4307-b1f5-cc3c431adc60'), workflow_id='sdk-workflow', series_ids={'wind_power': UUID('1dd82dea-f4e1-43e2-966d-db419eba2601')})"
+       "InsertResult(batch_id=2, workflow_id='sdk-workflow', series_ids={'wind_power': 1})"
       ]
      },
      "execution_count": 4,
@@ -187,7 +191,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "a90ee47f-e584-4db6-a4cb-4f167c937bd4",
+       "ref": "1448d2ca-6053-45a0-b90b-f715b832f005",
        "rows": [
         [
          "2025-01-01 00:00:00+00:00",
@@ -373,7 +377,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "55fcd7f7-8ac5-44a8-8bcc-2c2dc42a2d98",
+       "ref": "11861222-3e35-4561-8ca2-d614cda833d6",
        "rows": [
         [
          "(Timestamp('2025-01-01 00:00:00+0000', tz='UTC'), Timestamp('2025-01-01 00:00:00+0000', tz='UTC'))",
@@ -600,12 +604,6 @@
     "- Check out `nb_03_forecast_revisions.ipynb` for more detailed examples\n",
     "- Explore other notebooks for advanced features"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bd58761c",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
